# OttoPython

./: README.md
ProductSales/: README.md  pyproject.toml  requirements.txt
ProductSales/docs/: CONFIGURATION.md
ProductSales/src/otto/: db_utils.py  schemas.py
ProductSales/tests/: test_etl.py  test_schemas.py  test_utils.py
ProductSalesPython/: .gitignore  README.md  main.py
ProductSalesPython/src/otto/: __init__.py  config.py  etl.py  logging_config.py  main.py  models.py  utils.py
ProductSalesPython/tests/: test_config.py  test_models.py
ProductSalesSQL/: README.md
ProductSalesSQL/sql/: 00_digits_numbers.sql  01_create_calendar_from_numbers.sql  10_pipeline.sql  90_indexes.sql  99_data_quality_checks.sql
ProductSalesSQL/tests/: smoke_check.sql
